--- a/index.html
+++ b/index.html
@@ -8,49 +8,49 @@
     <title>Wannabe Responsive</title>
   </head>
   <body>
-    <section class="celeste">
+    <section>
       <div class="container">
-        <div class="col-lg-12">
+        <div class="col-xs-12 col-md-12 col-lg-12">
           <h1 class="center">Lezioni dove vuoi tu</h1>
         </div>
       </div>
       <div class="container">
           <!--riga sx-->
-        <div class="col-lg-6">
-          <div class="container">
+          <div class="col-xs-12 col-md-6 col-lg-6">
+              <div class="container">
+                <div class="center">
+                  <img src="img/maps.png" alt="logo maps">
+                </div>
+                <div class="container">
+                  <div class="col-lg-12">
+                    <h2 class="center">A casa</h2>
+                    <p class="center">Scegli il tuo maestro preferito e prenota la prima lezione a casa tua, a casa del maestro o nel suo studio</p>
+                  </div>
+                </div>
+              </div>
           </div>
-          <div class="container">
-            <div class="col-lg-offset-1 col-lg-4">
-              <img src="img/maps.png" alt="logo maps">
-            </div>
-            <div class="col-lg-offset-1 col-lg-5">
-              <h2 class="margin_bottom"> A casa</h2>
-              <p>Scegli il tuo maestro preferito e prenota la prima lezione a casa tua, a casa del maestro o nel suo studio</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="container">
-          </div>
-          <div class="container">
-            <div class="col-lg-offset-1 col-lg-4">
-              <img src="img/screen.png" alt="logo maps">
-            </div>
-            <div class="col-lg-offset-1 col-lg-6">
-              <h2 class="margin_bottom">On line</h2>
-              <p>Impara senza muoverti da casa! Scegli da una vastissima lista di maestri abilitati all'insegnamento online, senza doverti preoccupare di distanze e spostamenti</p>
-            </div>
-          </div>
-        </div>
-      </div>
 
-        <!--riga sx-->
-
-      </div>
+        <!--riga dx-->
+        <div class="col-xs-12 col-md-6 col-lg-6">
+            <div class="container">
+              <div class="center">
+                <img src="img/screen.png" alt="logo maps">
+              </div>
+              <div class="container">
+                <div class="col-lg-12">
+                  <h2 class="center">On line</h2>
+                  <p class="center">Impara senza muoverti da casa! Scegli da una vastissima lista di maestri abilitati all'insegnamento online, senza doverti preoccupare di distanze e spostamenti</p>
+                </div>
+              </div>
+            </div>
+        </div>
     </section>
 
     <!--SEZIONE A TRE COLONNE-->
-    <section>
+    <!--<section>
+      <div class="col-lg-12">
+        <h1>Come funziona?</h1>
+      </div>
       <div class="container">
         <div class="col-lg-4">
 
@@ -62,6 +62,6 @@
 
         </div>
       </div>
-    </section>
+    </section>-->
   </body>
 </html>
