--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Wannabe Responsive</title>
   </head>
   <body>
-    <section>
+    <section class="margin_bottom">
       <div class="container">
         <div class="col-xs-12 col-md-12 col-lg-12">
           <h1 class="center">Lezioni dove vuoi tu</h1>
@@ -47,21 +47,56 @@
     </section>
 
     <!--SEZIONE A TRE COLONNE-->
-    <!--<section>
-      <div class="col-lg-12">
-        <h1>Come funziona?</h1>
-      </div>
+    <section class="grey margin_bottom">
+      <!--prima colonna-->
       <div class="container">
-        <div class="col-lg-4">
-
+        <div class="col-xs-12 col-md-12 col-lg-12 margin_bottom">
+          <h1 class="center">Come funziona?</h1>
         </div>
-        <div class="col-lg-4">
-
-        </div>
-        <div class="col-lg-4">
-
+        <div class="container">
+          <div class="col-xs-12 col-md-6 col-lg-4">
+              <div class="container">
+                <div class="center">
+                  <img src="img/search.svg" alt="img ricerca">
+                </div>
+                <div class="container">
+                  <div class="col-lg-12">
+                    <h2 class="center">On line</h2>
+                    <p class="center">Impara senza muoverti da casa! Scegli da una vastissima lista di maestri abilitati all'insegnamento online, senza doverti preoccupare di distanze e spostamenti</p>
+                  </div>
+                </div>
+              </div>
+          </div>
+          <!--seconda colonna-->
+          <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="container">
+              <div class="center">
+                <img src="img/letter.svg" alt="logo maps">
+              </div>
+              <div class="container">
+                <div class="col-lg-12">
+                  <h2 class="center">On line</h2>
+                  <p class="center">Impara senza muoverti da casa! Scegli da una vastissima lista di maestri abilitati all'insegnamento online, senza doverti preoccupare di distanze e spostamenti</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--terza colonna-->
+          <div class="col-xs-12 col-md-12 col-lg-4">
+            <div class="container">
+              <div class="center">
+                <img src="img/male.svg" alt="logo maps">
+              </div>
+              <div class="container">
+                <div class="col-lg-12">
+                  <h2 class="center">On line</h2>
+                  <p class="center">Impara senza muoverti da casa! Scegli da una vastissima lista di maestri abilitati all'insegnamento online, senza doverti preoccupare di distanze e spostamenti</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </section>-->
+    </section>
   </body>
 </html>
