--- a/index.html
+++ b/index.html
@@ -98,5 +98,52 @@
         </div>
       </div>
     </section>
+    <!--TERZA SEZIONE-->
+    <section>
+      <div class="container ">
+        <div class="col-xs-12 col-md-12 col-lg-12 center margin_bottom">
+          <div class="container">
+            <div class="center">
+              <img src="img/profile.png" alt="img profilos">
+            </div>
+            <div class="container">
+              <div class="col-lg-12">
+                <h2 class="center">On line</h2>
+                <p class="center">Impara senza muoverti da casa! Scegli da una vastissima lista di maestri abilitati all'insegnamento online, senza doverti preoccupare di distanze e spostamenti</p>
+              </div>
+            </div>
+        </div>
+      </div>
+      <!--2 IMMAGINE-->
+      <div class="container">
+        <div class="col-xs-12 col-md-12 col-lg-12 center margin_bottom">
+          <div class="container">
+            <div class="center">
+              <img src="img/secure.png" alt="img sicurezza">
+            </div>
+            <div class="container">
+              <div class="col-lg-12">
+                <h2 class="center">On line</h2>
+                <p class="center">Impara senza muoverti da casa! Scegli da una vastissima lista di maestri abilitati all'insegnamento online, senza doverti preoccupare di distanze e spostamenti</p>
+              </div>
+            </div>
+        </div>
+      </div>
+      <!--3 IMMAGINE-->
+      <div class="container">
+        <div class="col-xs-12 col-md-12 col-lg-12 center margin_bottom">
+          <div class="container">
+            <div class="center">
+              <img src="img/flex.png" alt="flessibilità">
+            </div>
+            <div class="container">
+              <div class="col-lg-12">
+                <h2 class="center">On line</h2>
+                <p class="center">Impara senza muoverti da casa! Scegli da una vastissima lista di maestri abilitati all'insegnamento online, senza doverti preoccupare di distanze e spostamenti</p>
+              </div>
+            </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
