--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
             </div>
             <div class="container">
               <div class="col-lg-12">
-                <h2 class="center">On line</h2>
-                <p class="center">Impara senza muoverti da casa! Scegli da una vastissima lista di maestri abilitati all'insegnamento online, senza doverti preoccupare di distanze e spostamenti</p>
+                <h2 class="center">La più grande scuola d'Italia</h2>
+                <p class="center">Su Cademi trovi centinaia di Maestri qualificati e competenti in tutta Italia. Scegli quello più adatto a te e contattali senza impegno</p>
               </div>
             </div>
         </div>
@@ -123,8 +123,8 @@
             </div>
             <div class="container">
               <div class="col-lg-12">
-                <h2 class="center">On line</h2>
-                <p class="center">Impara senza muoverti da casa! Scegli da una vastissima lista di maestri abilitati all'insegnamento online, senza doverti preoccupare di distanze e spostamenti</p>
+                <h2 class="center">Soddisfazione garantita</h2>
+                <p class="center">Se non sei soddisfatto del tuo maestro, puoi cambiarlo senza costi aggiuntivi. Le lezioni acquistate su Cademi possono essere utilizzate con tutti i nostri maestri e il nostro team è sempre disponibile per darti un consiglio!</p>
               </div>
             </div>
         </div>
@@ -138,8 +138,8 @@
             </div>
             <div class="container">
               <div class="col-lg-12">
-                <h2 class="center">On line</h2>
-                <p class="center">Impara senza muoverti da casa! Scegli da una vastissima lista di maestri abilitati all'insegnamento online, senza doverti preoccupare di distanze e spostamenti</p>
+                <h2 class="center">Flessibile e conveniente</h2>
+                <p class="center">Cademi non ha alcun costo d’iscrizione a differenza delle scuole di musica tradizionali. Inoltre, sei tu a scegliere dove fare lezione e gli orari delle tue lezioni.</p>
               </div>
             </div>
         </div>
